--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <script src="./main.js"></script>
+    <main></main>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/view.js"></script>
+    <script src="./scripts/events.js"></script>
 </body>
 
 </html>
